--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [Répertoire d'ouvertures]
-show_downloads: ["false"]
+title: Répertoire d'ouvertures
+show_downloads: "false"
